--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My Amazing Website
+title: Hugo Son
 
 # Your name to show in the footer
 author: Some Person
